[package]
name = "compliance"
version = "0.1.0"
edition = "2021"


[features]
default=["ip_info_provider"]
ip_info_provider=[]
ip_who_provider=[]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
serde_json = "1.0.79"
