[package]
name = "compliance"
version = "0.1.0"
edition = "2021"


[features]
default=["ip_info_provider"]
ip_info_provider=[]
ip_who_provider=[]
usa_local_test=["ip_info_provider", "ip_who_provider"]

[dependencies]
clap = { version = "4.0.4", features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
